@@ -1,6 +1,13 @@
 
 Change Log
 
+10/03/2008
+- Attivato proxy tramite variabili di env
+- ShellThread iniziato lo spostamento dei thread da np a shell
+
+09/03/2007
+- Centralizzati i messaggi di errore
+
 08/03/2008
 - Allineamento esempi
 - Implementazione resize sugli HUD 2D
@@ -23,7 +30,7 @@ Change Log
 
 04/02/2008
 - Minor bug fix
-- Aggiunta define per settaare directory core o User space o FIrefox Plugin
+- Aggiunta define per settare directory core o User space o Firefox Plugin
 
 29/01/2008
 - Finita la release per nposg e core
